# tjm-desktop-grounding

./: .gitignore  README.md  pyproject.toml
src/tjm_desktop_grounding/: __init__.py  api.py  automation.py  config.py  grounding.py  main.py  models.py  screenshot.py
