[project]
name = "tjm-desktop-grounding"
version = "0.1.0"
description = "Vision-based desktop automation that dynamically grounds a Windows desktop icon before launching Notepad."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mss>=9.0.1",
    "opencv-python>=4.9.0.80",
    "pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pywin32>=306; platform_system == 'Windows'",
    "pywinauto>=0.6.8",
    "requests>=2.31.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.13",
]
clip = [
    "open-clip-torch>=2.24.0",
]

[project.scripts]
tjm-ground = "tjm_desktop_grounding.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tjm_desktop_grounding"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
package = true
